<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

<LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="64dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher"/>

    <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:background="@drawable/edt"
            android:inputType="phone"
            android:hint="@string/mobile_number"/>

    <EditText
            android:id="@+id/cycles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_margin="8dp"
            android:background="@drawable/edt"
            android:inputType="numberDecimal"
            android:hint="@string/loopscount"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/start_btn"
            android:background="@drawable/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            app:backgroundTint="@null"
            android:textColor="#ffffff"
            android:text="@string/run"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/proxies_btn"
            android:background="@drawable/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            app:backgroundTint="@null"
            android:textColor="#ffffff"
            android:text="@string/proxy_list"/>
</LinearLayout>

    <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-8334416213766495/78523947721">
        <!-- ca-app-pub-8334416213766495/78523947721 -->
    </com.google.android.gms.ads.AdView>

    <TextView
            android:id="@+id/github_lnk"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:background="@color/bg_bar"
            android:textSize="16sp"
            android:textColor="@color/main"
            android:text="@string/proj_ongit"/>

</LinearLayout>